2005-05-15  John ffitch  <jpff@codemist.co.uk>

	* Top/main.c: Prototype for mytmpnam

2005-05-14  John ffitch  <jpff@codemist.co.uk>

	* Top/argdecode.c (decode_long): Allow definition of macros

	* Engine/sread.c (init_smacros): 
	* Engine/rdorch.c (init_omacros): New functions to define macros
	
2005-05-11  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/ugmoss.c (valpass): Added cache of p->maxlpt to avoid
	overwriting arguments

2005-05-08  Michael Gogins <gogins@pipeline.com>
	* Added examples/Orbifold.py, an interactive display of the
	3-dimensional orbifold of all close voice-leadings between
	3-tone chords (based on the work of Professor Dmitri Tymoczko
	of Princeton). Also demonstrates controlling Csound from Python
	for real-time performance, and the use of 3-dimensional graphics
	for constructing graphical user interfaces.

2005-05-07	Istvan Varga	<istvan@csounds.com>
	* Opcodes/biquad.c:
	* Opcodes/biquad.h:
	  added new optional argument to distort1 opcode (defaults to zero),
	  to select amplitude scaling mode (0: default, compatible with
	  original version; 1: relative to 0dBFS, same as mode 0 if 0dbfs is
	  32768; 2: unscaled)
	  code changes to improve performance of some opcodes: biquad, vco,
	  pareq, and distort1
	  improved vco opcode for more accurate output
	* Engine/rdorch.c:
	* OOps/aops.c:
	  '=.a' opcode is automatically replaced with 'upsamp' if input is
	  not a-rate, the actual a-rate version has been simplified, and '=' is
	  removed by the parser if the output argument is the same as the input
	* OOps/ugens6.c:
	  deltapx/deltapxw revised for speed

2005-05-06	Istvan Varga	<istvan@csounds.com>
	* H/msg_attr.h:
	* Top/csound.c:
	  new message attributes: CSOUNDMSG_WARNING, CSOUNDMSG_FG_UNDERLINE
	* Engine/entry2.c:
	* H/ugens6.h:
	* OOps/ugens6.c:
	  added new optional argument to delayr and all deltap opcodes,
	  to allow delay taps to read from any of the nested delayr/delayw
	  pairs, not just the last (from Csound 4.23.4.1)
